--- a/Sunwise/Component/UVCurrentView/UVCurrent.xib
+++ b/Sunwise/Component/UVCurrentView/UVCurrent.xib
@@ -25,40 +25,40 @@
                     <rect key="frame" x="10" y="10" width="373" height="90"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6h1-2N-CM3">
-                            <rect key="frame" x="0.0" y="0.0" width="190" height="90"/>
+                            <rect key="frame" x="0.0" y="0.0" width="210" height="90"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="UV Index:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rRf-dk-cpj">
-                                    <rect key="frame" x="0.0" y="0.0" width="60" height="90"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="80" height="90"/>
                                     <constraints>
-                                        <constraint firstAttribute="width" constant="60" id="3Oi-Q4-gCb"/>
+                                        <constraint firstAttribute="width" constant="80" id="3Oi-Q4-gCb"/>
                                     </constraints>
-                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="UVI" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PRn-6r-F5y">
-                                    <rect key="frame" x="60" y="0.0" width="30" height="90"/>
+                                    <rect key="frame" x="80" y="0.0" width="30" height="90"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="30" id="LIU-WT-cAP"/>
                                     </constraints>
-                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="13"/>
+                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(Category)" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sAH-2C-Yks">
-                                    <rect key="frame" x="90" y="0.0" width="100" height="90"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(Category)" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="sAH-2C-Yks">
+                                    <rect key="frame" x="110" y="0.0" width="100" height="90"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="100" id="bM2-NW-OLH"/>
                                     </constraints>
-                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="13"/>
+                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                             </subviews>
                         </stackView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Recommendation Text" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gRs-eI-7uR">
-                            <rect key="frame" x="229.33333333333337" y="0.0" width="143.66666666666663" height="90"/>
-                            <fontDescription key="fontDescription" type="boldSystem" pointSize="13"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Recommendation Text" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="gRs-eI-7uR">
+                            <rect key="frame" x="226" y="0.0" width="147" height="90"/>
+                            <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
