--- a/Sunwise/View/Sunbathe Counter/SunbatheCounter.storyboard
+++ b/Sunwise/View/Sunbathe Counter/SunbatheCounter.storyboard
@@ -32,14 +32,13 @@
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aYU-WQ-HrO">
                                 <rect key="frame" x="71.666666666666686" y="301" width="250" height="250"/>
-                                <color key="backgroundColor" systemColor="systemOrangeColor"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="250" id="Uo0-S5-w9F"/>
                                     <constraint firstAttribute="height" constant="250" id="h8m-SB-rL3"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Goal: " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VlB-NU-BGg">
-                                <rect key="frame" x="10" y="571" width="373" height="21"/>
+                                <rect key="frame" x="10" y="601" width="373" height="21"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -73,7 +72,7 @@
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemGray6Color"/>
                         <constraints>
-                            <constraint firstItem="VlB-NU-BGg" firstAttribute="top" secondItem="aYU-WQ-HrO" secondAttribute="bottom" constant="20" id="4Gk-se-8bL"/>
+                            <constraint firstItem="VlB-NU-BGg" firstAttribute="top" secondItem="aYU-WQ-HrO" secondAttribute="bottom" constant="50" id="4Gk-se-8bL"/>
                             <constraint firstItem="HMi-vw-YUh" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="4Ii-kn-p0C"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="VlB-NU-BGg" secondAttribute="trailing" constant="10" id="5sk-XX-Voc"/>
                             <constraint firstItem="j9a-zI-bYh" firstAttribute="centerY" secondItem="5EZ-qb-Rvc" secondAttribute="centerY" id="6aU-Vs-RJf"/>
@@ -97,7 +96,9 @@
                     </view>
                     <connections>
                         <outlet property="finishSunbatheButton" destination="OZ3-Iv-u5K" id="wHa-LV-yRs"/>
+                        <outlet property="goalLabel" destination="VlB-NU-BGg" id="S5M-55-pft"/>
                         <outlet property="locationCurrentView" destination="gGc-rr-H2g" id="BoZ-G8-FGk"/>
+                        <outlet property="timerLabel" destination="j9a-zI-bYh" id="zJ1-u3-Hxi"/>
                         <outlet property="uvCurrentView" destination="p28-0z-0Qj" id="AtA-YO-JMw"/>
                     </connections>
                 </viewController>
@@ -115,9 +116,6 @@
         </systemColor>
         <systemColor name="systemMintColor">
             <color red="0.0" green="0.7803921568627451" blue="0.74509803921568629" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemOrangeColor">
-            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
